# blurry

./: .gitignore  CHANGELOG.md  README.md  blurry.py  gui.py  helper.py  image.py  pyproject.toml  similar.py  test.py  version.py
blurry/: CHANGELOG.md  __init__.py  __main__.py  gui.py  helper.py  image.py  main.py  similar.py
